internal class AnimationString
{
    // Player
    internal static string _canMove = "CanMove";
    internal static string _isGround = "IsGround";
    internal static string _isMove = "IsMove";
    internal static string _isRunning = "IsRunning";
    internal static string _yVelocity = "yVelocity";
    internal static string _isJumping = "IsJumping";
    internal static string _knocked = "Knocked";
    internal static string _knockBackID = "KnockBackID";
    internal static string _isSitting = "IsSitting";
    internal static string _isDashing = "IsDashing";
    internal static string _isAttack = "IsAttack";
    internal static string _weaponType = "WeaponType";
    internal static string _isAlive = "IsALive";
    internal static string _isDetected = "IsDetected";
    internal static string _attackSpeed = "AttackSpeed";

    // =====================
    // Enemy (dùng chung cho các EnemyBase, LeThuyNhan,...)
    // =====================
    internal static string _enemyIsWalking = "isWalking";
    internal static string _enemyIsDead = "isDead";
    internal static string _enemyIsAttack = "isAttack";
    internal static string _enemyIsHurt = "isHurt";
    internal static string _enemyIsPatrol = "isPatrol";
    internal static string _enemyIsStay = "isStay";
}
